# automata-exchange

./: README.md  setup.cfg
exchange/: InstrumentExchange.py  InstrumentExchangesHolder.py
exchange/rate/: ExchangeRateHolder.py
tests/exchange/: InstrumentExchange_test.py  InstrumentExchangesHolder_test.py
tests/exchange/rate/: ExchangeRateHolder_test.py  InstantRate_test.py
