[metadata]
name = persuader-technology-automata-exchange-rates
version = 0.0.8
description = Automata Exchange Rates
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    persuader-technology-automata-core>=0.2.1

[options.packages.find]
include = exchange*
exclude =
    tests
    simulations
    .scripts
